Cambios empresa y profesional

--- a/src/app/layout/hoja-vida/datos-personales/datos-personales.component.html
+++ b/src/app/layout/hoja-vida/datos-personales/datos-personales.component.html
@@ -136,8 +136,7 @@
                 </label>
                 <input type="email" [(ngModel)]="professional.email"
                        class="form-control text-lowercase"
-                       id="correoElectronico" name="correoElectronico" placeholder="Ej. contacto@gmail.com"
-                       required readonly>
+                       id="correoElectronico" name="correoElectronico" placeholder="Ej. contacto@gmail.com" required>
               </div>
               <!--Direccion-->
               <div class="form-group">
