--- a/src/app/register/persona/persona.component.html
+++ b/src/app/register/persona/persona.component.html
@@ -95,7 +95,7 @@
                   <div class="input-group">
                     <input type="password" class="form-control" name="confirmar" id="confirmar"
                            (keyup)="validarClaveConfirmacion()"
-                           [(ngModel)]="password_confirmation" required>
+                           [(ngModel)]="passwordConfirmation" required>
                     <i class="fa fa-check btn-success btn-sm" aria-hidden="true"
                        *ngIf="claveConfirmacionValida"></i>
                     <i class="fa fa-close btn-danger btn-sm" aria-hidden="true"
