--- a/src/app/reset/reset.component.html
+++ b/src/app/reset/reset.component.html
@@ -5,18 +5,33 @@
       <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
         <div class="form-group text-center pretty-form">
           <div class="form-group">
-            <img src="assets/img/bolsa-trabajo.png" class="img-responsive col-5" />
+            <img src="assets/img/bolsa-trabajo.png" class="img-responsive col-5"/>
           </div>
           <div class="form-group">
             <h3 class="col-12 text-center"><strong>Recuperación de Contraseña</strong></h3>
           </div>
           <div class="form-group">
-            <input type="email" class="form-control input-underline input-lg" name="correoElectronico" id="correoElectronico" placeholder="Correo Electrónico" [(ngModel)]="correoElectronico"
-              required>
+            <input type="text" class="form-control input-underline input-lg" name="identity"
+                   id="identity" placeholder="Identificación" [(ngModel)]="userName"
+                   required>
+            <input type="text" class="form-control input-underline input-lg" name="email" disabled
+                   id="email" [(ngModel)]="email" required *ngIf="validUser">
+            <h6 class="text-muted" *ngIf="validUser">
+              Se le enviará un correo electrónico
+            </h6>
           </div>
           <div class="form-group">
-            <button type="submit" class="col-8 btn btn-primary" (click)="reiniciar()" [disabled]="formCtrl.form.invalid">
-              Reiniciar
+            <button type="submit" class="col-8 btn btn-primary m-1" (click)="validateUser()"
+                    [disabled]="formCtrl.form.invalid" *ngIf="!validUser">
+              Validar
+            </button>
+            <button type="submit" class="col-8 btn btn-success m-1" (click)="reiniciar()" *ngIf="validUser"
+                    [disabled]="formCtrl.form.invalid">
+              Enviar
+            </button>
+            <button type="submit" class="col-8 btn btn-primary m-1" (click)="cancel()" *ngIf="validUser"
+                    [disabled]="formCtrl.form.invalid">
+              Cancelar
             </button>
           </div>
         </div>
