--- a/src/app/layout/hoja-vida/referencias-personales/referencias-personales.component.html
+++ b/src/app/layout/hoja-vida/referencias-personales/referencias-personales.component.html
@@ -86,14 +86,14 @@
           </div>
           <div class="form-group">
             <label>
-              <b class="text-danger">*</b> Apellidos y Nombres Contacto:
+              <b class="text-danger">*</b> Apellidos y Nombres del Contacto:
             </label>
             <input type="text" [(ngModel)]="selectedProfessionalReference.contact" class="form-control text-uppercase"
                    id="contact" name="contact" placeholder="Apellidos y Nombres" required>
           </div>
           <div class="form-group">
             <label>
-              <b class="text-danger">*</b> Teléfono:
+              <b class="text-danger">*</b> Teléfono del Contacto:
             </label>
             <input type="text" [(ngModel)]="selectedProfessionalReference.phone" class="form-control"
                    id="phone" name="phone" placeholder="Número de teléfono" required>
