--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,9 +3,9 @@
     <span class="navbar-toggler-icon text-white"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapse_target">
-    <a [routerLink]="['/postulantes']" [routerLinkActive]="['router-link-active']" class="navbar-brand">
-      <img src="assets/img/institutos.png" height="90px"/>
-    </a>
+    <!--<a [routerLink]="['/postulantes']" [routerLinkActive]="['router-link-active']" class="navbar-brand">-->
+      <!--<img src="assets/img/institutos.png" height="90px"/>-->
+    <!--</a>-->
 
     <!--Menu de Mi perfil-->
     <ul class="navbar-nav mr-auto">
