--- a/src/app/layout/hoja-vida/estudios-realizados/estudios-realizados.component.html
+++ b/src/app/layout/hoja-vida/estudios-realizados/estudios-realizados.component.html
@@ -70,6 +70,7 @@
     <div class="modal-body">
       <div class="row">
         <div class="col-12">
+
           <div class="form-group">
             <label for="institucion">
               <b class="text-danger">*</b> Institución:
@@ -103,13 +104,21 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="estaTitulado">
+              <input type="checkbox" id="estaTitulado" name="estaTitulado"
+                     [(ngModel)]="selectedAcademicFormation.has_titling"
+                     (click)="validateTitlingUnit()">
+              En unidad de titulación
+            </label>
+          </div>
+          <div class="form-group" *ngIf="!selectedAcademicFormation.has_titling">
             <label for="registrationDate">
               <b class="text-danger">*</b> Fecha de Registro:
             </label>
             <input type="date" class="form-control" name="registrationDate" id="registrationDate"
                    (keypress)="false" [(ngModel)]="selectedAcademicFormation.registration_date" required>
           </div>
-          <div class="form-group">
+          <div class="form-group" *ngIf="!selectedAcademicFormation.has_titling">
             <label for="codigoRegistro">
               <b class="text-danger">*</b> Código de Registro SENESCYT:
             </label>
@@ -125,10 +134,12 @@
         {{messages['requiredFields']['text']}}
       </h6>
       <button class="btn btn-success" (click)="c('save')" [disabled]="formCtrl.form.invalid">
-        <span class="{{messages['saveConfirmationDialog']['iconOk']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['ok']}}
+        <span
+          class="{{messages['saveConfirmationDialog']['iconOk']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['ok']}}
       </button>
       <button class="btn btn-danger" (click)="c('close')">
-        <span class="{{messages['saveConfirmationDialog']['iconCancel']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['cancel']}}
+        <span
+          class="{{messages['saveConfirmationDialog']['iconCancel']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['cancel']}}
       </button>
     </div>
   </form>
