--- a/src/app/layout/perfil-empresa/informacion-empresa/informacion-empresa.component.html
+++ b/src/app/layout/perfil-empresa/informacion-empresa/informacion-empresa.component.html
@@ -60,6 +60,9 @@
                   <option value="PÚBLICA">PÚBLICA</option>
                   <option value="PRIVADA">PRIVADA</option>
                   <option value="MIXTA">MIXTA</option>
+                  <option value="TERCER SECTOR">TERCER SECTOR</option>
+                  <option value="ORGANISMOS INTERNACIONALES">ORGANISMOS INTERNACIONALES</option>
+                  <option value="OTRO">OTRO</option>
                 </select>
               </div>
               <!--Actividad Economica-->
