--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,9 @@
-<p>
-  page-not-found works!
-</p>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="top-banner-div" style="background-image: url(assets/img/welcome-bg.png);">
+      <h1 class="text-left titulo" style="color:white; font-size: 70px; font-weight: 700;">
+        404 - PAGE NOT FOUND
+      </h1>
+    </div>
+  </div>
+</div>
