--- a/src/app/register/empresa/empresa.component.html
+++ b/src/app/register/empresa/empresa.component.html
@@ -12,7 +12,7 @@
               <div class="row">
                 <div class="col-6">
                   <label for="identificacion" class="col-form-label">
-                    <b class="text-danger">*</b> Identificación:
+                    <b class="text-danger">*</b> R.U.C.:
                   </label>
                   <input class="form-control" name="identificacion" id="identificacion" required
                          [(ngModel)]="company.identity" placeholder="Ej. 1234567890001">
@@ -27,17 +27,12 @@
                     <option value="PÚBLICA">PÚBLICA</option>
                     <option value="PRIVADA">PRIVADA</option>
                     <option value="MIXTA">MIXTA</option>
+                    <option value="TERCER SECTOR">TERCER SECTOR</option>
+                    <option value="ORGANISMOS INTERNACIONALES">ORGANISMOS INTERNACIONALES</option>
+                    <option value="OTRO">OTRO</option>
                   </select>
                 </div>
               </div>
-            </div>
-            <!-- Nombre Comercial !-->
-            <div class="form-group">
-              <label for="nombreComercial" class="col-form-label">
-                <b class="text-danger">*</b> Nombre Comercial:
-              </label>
-              <input type="text" class="form-control text-uppercase" name="nombreComercial" id="nombreComercial"
-                     [(ngModel)]="company.trade_name" required>
             </div>
             <!-- Contraseña !-->
             <div class="form-group">
@@ -70,6 +65,21 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h6 class="text-muted">- Mínimo 6 caracteres</h6>
+                </div>
+              </div>
+            </div>
+            <!-- Nombre Comercial !-->
+            <div class="form-group">
+              <label for="nombreComercial" class="col-form-label">
+                <b class="text-danger">*</b> Nombre Comercial:
+              </label>
+              <input type="text" class="form-control text-uppercase" name="nombreComercial" id="nombreComercial"
+                     [(ngModel)]="company.trade_name" required>
             </div>
             <!-- Actividad Economica !-->
             <div class="form-group">
