--- a/src/app/layout/postulantes/filtro/filtro.component.html
+++ b/src/app/layout/postulantes/filtro/filtro.component.html
@@ -31,7 +31,7 @@
                     <tr>
                       <td width="80%">
                         <a class="professional_degree" href="javascript:void(0)"
-                           (click)="filterPostulantsSingle('specific_field',areaEspecifica.nombre)">
+                           (click)="filterPostulantsSingle('professional_degree',areaEspecifica.nombre)">
                           {{areaEspecifica.nombre}}
                         </a>
                       </td>
