--- a/src/app/layout/postulantes/filtro/filtro.component.html
+++ b/src/app/layout/postulantes/filtro/filtro.component.html
@@ -30,7 +30,7 @@
                     <!--<tr *ngIf="areaEspecifica.total">-->
                     <tr>
                       <td width="80%">
-                        <a class="professional_degree" href="javascript:void(0)"
+                        <a class="iprofessional_degree" href="javascript:void(0)"
                            (click)="filterPostulantsSingle('professional_degree',areaEspecifica.nombre)">
                           {{areaEspecifica.nombre}}
                         </a>
