--- a/src/app/layout/hoja-vida/fortalezas/fortalezas.component.html
+++ b/src/app/layout/hoja-vida/fortalezas/fortalezas.component.html
@@ -80,7 +80,7 @@
             <label>
               <b class="text-danger">*</b> Descripción:
             </label>
-            <textarea type="text" [(ngModel)]="selectedAbility.description" class="form-control"
+            <textarea type="text" [(ngModel)]="selectedAbility.description" class="form-control text-uppercase"
                       id="description" name="description" placeholder="" required rows="10"></textarea>
           </div>
         </div>
