--- a/src/app/layout/hoja-vida/datos-personales/datos-personales.component.html
+++ b/src/app/layout/hoja-vida/datos-personales/datos-personales.component.html
@@ -116,7 +116,7 @@
                       <b class="text-danger">*</b> Fecha de Nacimiento:
                     </label>
                     <input type="date" class="form-control" name="fechaDeNacimiento" id="fechaDeNacimiento"
-                           (keypress)="false" [(ngModel)]="professional.birthdate" required>
+                           [(ngModel)]="professional.birthdate" required>
                   </div>
                 </div>
               </div>
