--- a/src/app/layout/hoja-vida/estudios-realizados/estudios-realizados.component.html
+++ b/src/app/layout/hoja-vida/estudios-realizados/estudios-realizados.component.html
@@ -115,7 +115,7 @@
               <b class="text-danger">*</b> Fecha de Registro:
             </label>
             <input type="date" class="form-control" name="registrationDate" id="registrationDate"
-                   (keypress)="false" [(ngModel)]="selectedAcademicFormation.registration_date" required>
+                   [(ngModel)]="selectedAcademicFormation.registration_date" required>
           </div>
           <div class="form-group" *ngIf="!selectedAcademicFormation.has_titling">
             <label for="codigoRegistro">
